adding queries to retrieve wikidata info

--- a/cornell-demos/search_app/app/views/catalog/_show.html.erb
+++ b/cornell-demos/search_app/app/views/catalog/_show.html.erb
@@ -22,7 +22,7 @@
 			  </button>
            	<% end %>
 	<% end %>
-<%= doc_presenter.field_value field %>
+<% #= doc_presenter.field_value field  #%>
 
 <% else %>
   <%= doc_presenter.field_value field %>
