--- a/related-searches/app/views/catalog/_show_default.html.erb
+++ b/related-searches/app/views/catalog/_show_default.html.erb
@@ -28,12 +28,13 @@
 	          </a>
 			  <% if document["workid_display"].present? %>
 	            <%  work_id = document["workid_display"][0] %>
-		        <%Rails.logger.info("HERE COMES THE WORK ID => " + work_id.inspect)%>
-	            <a href='#' role="button" tabindex = "0" data-wikiload='<%= work_id  %>' id="wiki" class="info-button hidden-xs">
-		          <span class="label label-info">
-	                Work Info
-	              </span>
-	            </a>
+	            <div style="display:none">
+	              <a href='#' role="button" tabindex = "0" data-wikiload='<%= work_id  %>' id="wiki" class="info-button hidden-xs">
+		            <span class="label label-info">
+	                  Work Info
+	                </span>
+	              </a>
+	            </div>
 		      <% end %>
 	        <% end %>
           <% end %>
