--- a/cornell-catalog-demo/app/views/catalog/_show_default.html.erb
+++ b/cornell-catalog-demo/app/views/catalog/_show_default.html.erb
@@ -1,5 +1,5 @@
 <%# default partial to display solr document fields in catalog show view -%>
-<dl class="dl-horizontal">
+<dl class="dl-horizontal" id="itemDetails">
   <% document_show_fields(document).each do |solr_fname, field| -%>
     <% if document.has? solr_fname  -%>
 	    <dt class="blacklight-<%= solr_fname.parameterize %>"><%= render_document_show_field_label document, :field => solr_fname %></dt>
@@ -17,7 +17,7 @@
               <% else search = heading['search1']  %>
               <% end %>
               <%# show heading popover for everything bigger than smartphone %>
-	          <a href='#' role="button" tabindex = "0" base-url="<%= root_url %>" data-auth=type='author' data-auth='<%=search %>' datasearch-poload='/browse/info?authq=<%=  search %>&amp;browse_type=Author&amp;headingtype=<%=  type %>' id="info" class="info-button hidden-xs"><span class="label label-info">
+	          <a href='#' role="button" tabindex = "0" base-url="<%= root_url %>" data-auth-type='author' data-auth='<%=search %>' datasearch-poload='/browse/info?authq=<%=  search %>&amp;browse_type=Author&amp;headingtype=<%=  type %>' id="info" class="info-button hidden-xs"><span class="label label-info">
 	            i
 	          </span>
 	          </a>
@@ -42,33 +42,7 @@
             <% authname = field_value solr_fname %>
 	          <% document['subject_json'].each do |subjectArray| %>
 	            <% subjects = JSON.parse(subjectArray) %>
-	            <%#= render_clickable_document_show_field_value :value => subjectArray, :document => document, :field => solr_fname -%> 
-	            <% indent = 0 %>
-	            <div>      	                
-	            <% subjects.each do |heading| %>
-	                <% styleText = "" %>
-	                <% if indent > 0 %>
-	                  <% styleText = "margin-left:" + indent.to_s + "px;" %>    
-	                <% end %>  	
-	                <% indent += 10 %>
-	                <div style="<%= styleText %>"                	                
-	                <% headingArray = [] %>
-	                <% headingArray << heading %>
-	                <%= render_clickable_document_show_field_value :value => JSON.generate(headingArray), :document => document, :field => solr_fname %>       	                
-		            <% if heading.key?("authorized") && heading["authorized"] == true %> 
-		              <% type = heading['type']  %>
-		              <% if heading['subject'].present?  %>
-		                <% search = heading['subject'] %>
-		              <% end %>
-		              <%# show heading popover for everything bigger than smartphone %>
-			          <a href='#' role="button" tabindex = "0" base-url="<%= root_url %>" data-auth-type='subject' data-auth='<%=search %>' datasearch-poload='/browse/info?authq=<%=  search %>&amp;browse_type=Subject&amp;headingtype=<%=  type %>' id="info" class="info-button hidden-xs"><span class="label label-info">
-			            i
-			          </span>
-			          </a>
-			        <% end %>
-			        </div>
-		        <% end %>
-		        </div>
+	            <%= render_clickable_document_show_field_value :value => subjectArray, :document => document, :field => solr_fname, :root_url => root_url %> 
 	          <% end %>   
         <% elsif display_link? solr_fname -%>   
            <%= render_display_link :document => document, :field => solr_fname %>
