Convert text to lists and style the lists

--- a/cornell-catalog-demo/app/assets/stylesheets/application.css.scss
+++ b/cornell-catalog-demo/app/assets/stylesheets/application.css.scss
@@ -30,4 +30,5 @@
 @import 'cornell/variables';
 @import 'blacklight';
 @import 'cornell/cul-catalog';
+@import 'cornell/knowledge-panel';
 @import 'singlesearch';
