--- a/cornell-catalog-demo/app/assets/stylesheets/cornell/_base.scss
+++ b/cornell-catalog-demo/app/assets/stylesheets/cornell/_base.scss
@@ -239,3 +239,15 @@ h3 { font-size: 20px; line-height: 1.5em;}
 	background: white;
 	padding-top: 1em;
 }
+.discogs-bgc {
+	background-color: #d4e7f8;
+}
+.wikidata-bgc {
+	background-color: #fbe6c8;
+}
+a.data-src {
+    margin-left: 8px;
+}
+.data-src  img {
+	width: 16px;
+}
