add digital collections when facet for subject selected

--- a/cornell-catalog-demo/app/views/catalog/_expand_search.html.erb
+++ b/cornell-catalog-demo/app/views/catalog/_expand_search.html.erb
@@ -1,4 +1,4 @@
-<div class="expand-search">
+<div id="expanded-search" class="expand-search">
 	<div class="panel panel-default">
 		<div class="panel-heading">
 			<h3 class="panel-title">Looking for more?</h3>
