--- a/cornell-catalog-demo/app/views/catalog/_digital_collections_search.html.erb
+++ b/cornell-catalog-demo/app/views/catalog/_digital_collections_search.html.erb
@@ -1,10 +1,10 @@
-<div class="expand-search">
+<div id="digital-collections-search" class="expand-search" facet-name="<%= facet_name %>" facet-value="<%= facet_value %>" base-url="<%= root_url %>">
 	<div class="panel panel-default">
 		<div class="panel-heading">
-			<h3 class="panel-title">Digital Collections Search</h3>
+			<h3 class="panel-title">Digital Collections Subject Search  <a id="dig-search-anchor"><i class='fa fa-external-link'></i></a></h3>
 		</div>
 		<div class="panel-body">
-			<ul class="fa-ul">
+			<ul class="fa-ul" id="digital-results">
 				
 			</ul>
 		</div>
