--- a/cornell-catalog-demo/app/views/catalog/_looking_for_more.html.erb
+++ b/cornell-catalog-demo/app/views/catalog/_looking_for_more.html.erb
@@ -7,7 +7,8 @@
 <% end %>
 
 
-<% #if facet_field_in_params? field -%>
-<% if facet_field_in_params?("fast_topic_facet") %>
-  <%= render :partial => 'digital_collections_search' %>
-<% end %>
+<% facet_name = "fast_topic_facet" %>
+<% if facet_field_in_params?(facet_name) %>
+  <% facet_value = facet_params(facet_name)  %>
+  <%= render :partial => 'digital_collections_search', :locals => {facet_name:facet_name, facet_value:facet_value} %>
+<% end %> 
