Add a "less" button to knowlege panel lists

--- a/cornell-catalog-demo/app/assets/stylesheets/cornell/_knowledge-panel.scss
+++ b/cornell-catalog-demo/app/assets/stylesheets/cornell/_knowledge-panel.scss
@@ -38,7 +38,7 @@
   background: none;
   border: none;
   padding: 0;
-  margin-left: 0;
+  margin: 0 15px 0 0;
   font-size: smaller;
   display: none;
 }
