--- a/cornell-catalog-demo/app/assets/stylesheets/cornell/_base.scss
+++ b/cornell-catalog-demo/app/assets/stylesheets/cornell/_base.scss
@@ -246,7 +246,7 @@ h3 { font-size: 20px; line-height: 1.5em;}
 	background-color: #fbe6c8;
 }
 a.data-src {
-    margin-left: 8px;
+    margin-left: 8px !important;
 }
 .data-src  img {
 	width: 16px;
