--- a/standalone/vis.css
+++ b/standalone/vis.css
@@ -28,3 +28,15 @@ marker {
 svg{
 	border:1px solid black;
 }
+/* Adding hovered styling*/
+.node.hovered {
+ stroke:#1f77b4; 
+ stroke-opacity: 1;
+ stroke-width:3
+}
+
+.link.hovered {
+ stroke:#1f77b4; 
+ stroke-opacity: 1;
+ stroke-width:3
+}
